--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "autoprefixer": "^10.2.5",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "lru-cache": "^6.0.0",
     "next": "10.1.3",
     "postcss": "^8.2.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-particles-js": "^3.4.1",
-    "tailwindcss": "^2.1.1"
+    "tailwindcss": "^2.1.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^7.24.0",
