--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@ yarn-error.log*
 # local env files
 .env.local
 .env.development.local
+.env.development
+.env
+.env.test
 .env.test.local
 .env.production.local
 
