--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "17.0.2",
     "react-particles-js": "^3.4.1",
     "tailwindcss": "^2.1.1",
+    "tweetnacl": "^1.0.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
