--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@tailwindcss/jit": "^0.1.18",
     "autoprefixer": "^10.2.5",
+    "beremoji": "^1.6.2",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-prettier": "^3.4.0",
     "lru-cache": "^6.0.0",
