--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "f1sh-site",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -36,7 +36,8 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.23.2"
+    "eslint-plugin-react": "^7.23.2",
+    "tailwind-scrollbar": "^1.3.0"
   },
   "config": {
     "commitizen": {
