--- a/package.json
+++ b/package.json
@@ -18,15 +18,12 @@
     "beremoji": "^1.6.2",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "lru-cache": "^6.0.0",
     "next": "10.1.3",
     "postcss": "^8.2.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-particles-js": "^3.4.1",
     "tailwindcss": "^2.1.1",
-    "tweetnacl": "^1.0.3",
-    "uuid": "^8.3.2"
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "commitizen": "^4.2.4",
