--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "beremoji": "^1.6.2",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "fuzzyset": "^1.0.6",
     "jsdom": "^16.5.3",
     "next": "10.1.3",
     "postcss": "^8.2.10",
