--- a/package.json
+++ b/package.json
@@ -14,18 +14,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@tailwindcss/jit": "^0.1.18",
-    "autoprefixer": "^10.2.5",
-    "beremoji": "^1.6.2",
+    "autoprefixer": "^10.4.2",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "fuzzyset": "^1.0.6",
-    "jsdom": "^16.5.3",
     "next": "10.1.3",
-    "postcss": "^8.2.10",
+    "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "tailwindcss": "^2.1.1",
-    "tweetnacl": "^1.0.3"
+    "tailwindcss": "^3.0.13"
   },
   "devDependencies": {
     "@types/node": "^15.0.3",
